--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "microjpeg",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Deliver micro-sized images to clients by decoupling a static JPEG header",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "start": "node build/index.js",
     "clean": "rimraf lib && mkdir lib",
-    "build": "npm run clean && babel --presets es2015 -d ./lib ./src --minified",
-    "watch": "nodemon src/ --exec \"babel-node --presets es2015 src/index.js\""
+    "build": "npm run clean && babel -d ./lib ./src --minified",
+    "watch": "nodemon src/ --exec \"babel-node src/index.js\""
   },
   "repository": {
     "type": "git",
@@ -30,17 +30,12 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "eslint": "^4.2.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.7.0",
     "nodemon": "^1.11.0",
     "rimraf": "^2.6.1"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
   },
   "eslintConfig": {
     "extends": "airbnb-base",
@@ -53,6 +48,22 @@
     }
   },
   "dependencies": {
-    "jpeg-js": "^0.3.3"
+    "jpeg-js": "^0.3.3",
+    "sharp": "^0.19.0"
+  },
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
+  },
+  "engines": {
+    "node": ">= 9.5.0"
   }
 }
